fixed navigation hover, removed spacings, implemented images and view all services

--- a/styles/global.css
+++ b/styles/global.css
@@ -82,3 +82,7 @@ a:hover {
     width: 0 !important;
   }
 }
+
+.MuiModal-root {
+  z-index: 1;
+}
